<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATLAS</string>
    <string name="add_location">Add location</string>
    <string name="action_private_map">Private map</string>
    <string name="private_map">Private map</string>
    <string name="create_account">Create account</string>
    <string name="public_map">Public map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="action_add_place">Add place</string>
    <string name="action_sing_out">Sign out</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_zoom_to_me">Zoom to me</string>
    <string name="facebook_app_id">748966228551478</string>

    <string name="create_one"><u>Create one!</u></string>

    <string-array name="gender_options">
        <item>Unspecified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
